--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cors": "^2.8.1",
+    "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "helmet": "^3.1.0",
     "mocha": "^5.0.5",
