--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^3.1.0",
     "mocha": "^5.0.5",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.0.12",
     "zombie": "^5.0.5"
   },
   "engines": {
